Add HLJS support

--- a/aaron-purple/scss/aaron-purple.scss
+++ b/aaron-purple/scss/aaron-purple.scss
@@ -261,3 +261,7 @@
 // Theme template ------------------------------
 @import "theme";
 // ---------------------------------------------
+
+// Code Highlight ------------------------------
+@import "highlight";
+// ---------------------------------------------
