--- a/aaron-purple/scss/mixins.scss
+++ b/aaron-purple/scss/mixins.scss
@@ -28,6 +28,21 @@
 	background: radial-gradient( center, $type cover,  $inner 0%, $outer 100% );
 }
 
+@mixin light-bg-text-color( $color ) {
+	section.has-light-background {
+		&, h1, h2, h3, h4, h5, h6 {
+			color: $color;
+		}
+	}
+}
+
+@mixin dark-bg-text-color( $color ) {
+	section.has-dark-background {
+		&, h1, h2, h3, h4, h5, h6 {
+			color: $color;
+		}
+	}
+}
 @mixin rotate( $rotate: -90deg ) {
 	-webkit-transform: rotate( $rotate );
 	-moz-transform:    rotate( $rotate );
