--- a/aaron-purple/scss/settings.scss
+++ b/aaron-purple/scss/settings.scss
@@ -1,33 +1,24 @@
 // Base settings for all themes that can optionally be
 // overridden by the super-theme
 
-
-$color-primary-0: #8377D1;	// Main Primary color */
-$color-primary-1: #D6D1F7;
-$color-primary-2: #ABA1E6;
-$color-primary-3: #6254B8;
-$color-primary-4: #4739A2;
-
-
-
 // Background of the presentation
-$backgroundColor: #D6D1F7;
+$backgroundColor: #2b2b2b;
 
 // Primary/body text
-$mainFont: 'Open Sans', sans-serif;
-$mainFontSize: 36px;
-$mainColor: rgba(0,0,0,.5);
+$mainFont: 'Lato', sans-serif;
+$mainFontSize: 40px;
+$mainColor: #eee;
 
 // Vertical spacing between blocks of text
 $blockMargin: 20px;
 
 // Headings
 $headingMargin: 0 0 $blockMargin 0;
-$headingFont: 'Open Sans', sans-serif;
-$headingColor: #8377D1;
-$headingLineHeight: 1em;
-$headingLetterSpacing: -2px;
-$headingTextTransform: none;
+$headingFont: 'League Gothic', Impact, sans-serif;
+$headingColor: #eee;
+$headingLineHeight: 1.2;
+$headingLetterSpacing: normal;
+$headingTextTransform: uppercase;
 $headingTextShadow: none;
 $headingFontWeight: normal;
 $heading1TextShadow: $headingTextShadow;
@@ -40,14 +31,15 @@ $heading4Size: 1.00em;
 $codeFont: monospace;
 
 // Links and actions
-$linkColor: #6254B8;
+$linkColor: #13DAEC;
 $linkColorHover: lighten( $linkColor, 20% );
 
 // Text selection
-$selectionBackgroundColor: #ADA7C9;
+$selectionBackgroundColor: #FF5E99;
 $selectionColor: #fff;
 
+// Generates the presentation background, can be overridden
+// to return a background image or gradient
 @mixin bodyBackground() {
-	background-image: url("images/asanoha-400px.png");
-	//background: $backgroundColor;
+	background: $backgroundColor;
 }
